add map side panel to image basemap for WEB

--- a/www/css/style.web.css
+++ b/www/css/style.web.css
@@ -87,7 +87,7 @@ html, body, .container-fluid, .strabo-page-content {
 /* Map Side Panel*/
 .sidebar{
   top: 50px;
-  z-index: 5;             /* Added so modals would be on top of the side panel */
+  z-index: 5;             /* Added so modals would be on top of the side panel (Ionic modals have z index 10)*/
 }
 
 /*--------------------
