moved manage project functions to 3-dot popover menu and added better warning for upload/download

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -12,6 +12,10 @@ Basic Style
   text-transform: capitalize;
 }
 
+.warning-popup .popup-head{
+  background: red  !important;
+}
+
 /*--------------------
 Project Info
 --------------------*/
