changed inferences tab to relationships tab

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -735,7 +735,7 @@ Spots Page
 .other-features-on{
   background-color: #fdb462;
 }
-.inferences-on{
+.relationships-on{
   background-color: #fccde5;
 }
 .list-sub{
