--- a/www/css/style.css
+++ b/www/css/style.css
@@ -757,3 +757,43 @@ Relationships Page
   border-top: 2px solid darkgray;
   border-bottom: 2px solid darkgray;
 }
+
+/*--------------------
+Samples and Images Pages
+---------------------*/
+
+.strabo-flex-container {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  border: 1px solid silver;
+  -ms-box-orient: horizontal;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+}
+
+.strabo-wrap    {
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.strabo-wrap li {
+  background:  #F6F6F6;
+}
+
+.strabo-flex-item {
+  padding: 5px;
+  width: 200px;
+  height: 260px;
+  margin: 10px;
+  overflow: hidden;
+}
+
+.sample-box-header-text{
+  font-weight: bold;
+  text-decoration: underline;
+}
