--- a/www/css/style.css
+++ b/www/css/style.css
@@ -480,6 +480,11 @@ textarea {
   height: 25px !important;
 }
 
+.strabo-field-info-button {
+  top: -5px;
+  color: #387ef5;
+}
+
 /*--------------------
 Style fields for input errors and no-errors
 --------------------*/
