--- a/www/css/style.web.css
+++ b/www/css/style.web.css
@@ -103,6 +103,10 @@ html, body, .container-fluid, .strabo-page-content {
   z-index: 5;             /* Added so modals would be on top of the side panel (Ionic modals have z index 10)*/
 }
 
+.strabo-field-info-button {
+  top: -1px;
+}
+
 /*--------------------
 GoldenLayout Dashboard
 ---------------------*/
