removed no basemap baselayer

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -188,6 +188,10 @@ Map Controls Style
   opacity: 0.75;
 }
 
+.ol-attribution.ol-logo-only {
+  bottom: 20px;
+}
+
 .nesting-notification {
   text-align: center;
   line-height: 90%;
