updated modals for Spots list

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -296,6 +296,14 @@ Buttons
   width: 30px;
 }
 
+.close-modal-button {
+  color: lightgray;
+  position: relative;
+  top: -5px;
+  background: transparent;
+  border: none;
+}
+
 /*--------------------
 Orientation Tab Style
 --------------------*/
