sed - updated map popups

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -235,6 +235,14 @@ Map Popups Style
   padding: 5px;
 }
 
+.popup-title {
+  text-decoration: underline;
+}
+
+.popup-more-button {
+  float: right;
+}
+
 /*--------------------
 Buttons
 --------------------*/
