sed - added sed structures + bug fixes

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -807,6 +807,9 @@ Spots Page
 .lithologies-on{
   background-color: #f2a9fc;
 }
+.sed-structures-on{
+  background-color: #6bcffc;
+}
 .list-sub{
   font-size: small;
   padding-left: 24px;
