sed - added sed interpretations tab

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -804,6 +804,9 @@ Spots Page
 .strat-section-on{
   background-color: #9bfdea;
 }
+.sed-interpretations-on{
+  background-color: #fcbf90;
+}
 .lithologies-on{
   background-color: #f2a9fc;
 }
