Lat/Long & X/Y margin fix

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -536,6 +536,10 @@ textarea {
   border-right: none;
 }
 
+.no-left-margin {
+  margin-left: 0;
+}
+
 /*--------------------
 Style fields for input errors and no-errors
 --------------------*/
