updated Spots-list detail

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -847,6 +847,9 @@ Spots Page
 .other-features-on{
   background-color: #fdb462;
 }
+.minerals-on{
+  background-color: #0af36b;
+}
 .relationships-on{
   background-color: #fccde5;
 }
