--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1024,3 +1024,36 @@ Misc
 .circle.hollow {
   background: white;
 }
+
+/*--------------------
+Thin Section
+---------------------*/
+
+.side-images-scroll {
+  width: 240px; /* Set the width of the sidebar for the images*/
+  height: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.thin-section-maps {
+  top: 0; /* Stay at the top */
+  height: calc(100% - 15px); /* Full-height: remove this if you want "auto" height */
+  left: 240px;
+  width: calc(100% - 240px); /* Full-width minus side images scroll */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+}
+
+.thin-section-map {
+  margin: 4px;
+  width: calc(50% - 8px);   /* Take margins in to consideration */
+  height: 50%;
+  border-style: solid;
+  border-width: 2px;
+  float: left;
+}
