--- a/www/css/style.web.css
+++ b/www/css/style.web.css
@@ -125,3 +125,19 @@ strong {
 template {
   display: none;
 }
+
+/*--------------------
+Thin Section
+---------------------*/
+
+.side-images-scroll {
+  top: 50px; /* Take into account top menu bar */
+  width: 250px; /* Set the width of the sidebar for the images */
+}
+
+.thin-section-maps {
+  top: 50px;  /* Take into account top menu bar */
+  height: calc(100% - 50px - 15px); /* Full-height minus top menu bar minus a little extra for the bottom */
+  left: 250px;
+  width: calc(100% - 250px);  /* Full-width minus side images scroll */
+}
