--- a/www/css/style.css
+++ b/www/css/style.css
@@ -564,7 +564,9 @@ textarea {
 .item-checkbox{
   position: relative;
 }
-
+.item{
+  display: flex;
+}
 .range input {
   height: 43px;               /* Set back to original for range */
 }
@@ -586,6 +588,21 @@ Form Select Multiple Choices Fields Style
 .item-button-right > .button {
   z-index: 4; 
   font-size: 12px;
+}
+#minerals-info-button{
+  float: left;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  align-items: center;
+  position: relative;
+  top: -4px;
+  right: -27px;
+  min-width: 34px;
+  min-height: 34px;
+  font-size: 12px;
+  line-height: 32px;
 }
 
 .mineral-info-display > .row{
