--- a/www/css/style.css
+++ b/www/css/style.css
@@ -561,6 +561,10 @@ textarea {
   position: absolute;
 }
 
+.mineral-checkbox{
+  margin-left: -40;
+}
+
 .item-checkbox{
   position: relative;
 }
@@ -591,14 +595,10 @@ Form Select Multiple Choices Fields Style
 }
 #minerals-info-button{
   float: left;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
   align-items: center;
   position: relative;
-  top: -4px;
-  right: -27px;
+  top: -8px;
+  right: -13px;
   min-width: 34px;
   min-height: 34px;
   font-size: 12px;
@@ -640,15 +640,18 @@ Form Select Multiple Choices Fields Style
   padding: 25px;
 }
 .strabo-choices-flex-container {
-  padding-left: 16px;
+  padding-left: 0px;
   margin: 0;
-  display: flex;
+  border: none;
+  
+   display: flex;
 }
 .strabo-choices-flex-item {
   flex: 1 0 200px;
   margin-bottom: 1px;
+  margin-left: 83px;
   /* align-content: space-around; */
-  /* display: table; */
+  display: flex;
 }
 @media (min-width: 410px) {
   .strabo-flex-container .strabo-choices-flex-item {
