--- a/www/css/style.css
+++ b/www/css/style.css
@@ -367,6 +367,21 @@ Orientation Tab Style
   font-size: x-small;
 }
 
+.clipboard-modal-text{
+  text-align: center;
+  font-size: 16px;
+  padding-bottom: 25px;
+}
+
+.clipboard-data-modal{
+  display: block;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  border: #f8f8f8;
+  border-style: solid;
+  font-size: 14px;
+}
 /*--------------------
 Online & Offline Notification Circles
 --------------------*/
