--- a/www/css/style.css
+++ b/www/css/style.css
@@ -369,17 +369,20 @@ Orientation Tab Style
 
 .clipboard-modal-text{
   text-align: center;
-  font-size: 16px;
-  padding-bottom: 25px;
+  font-size: small;
+  margin: auto;
 }
 
 .clipboard-data-modal{
   display: block;
-  width: 75%;
+  width: 80%;
+  height: 80%;
   margin-left: auto;
   margin-right: auto;
   border: #f8f8f8;
+  border-width: 4px;
   border-style: solid;
+  
   font-size: 14px;
 }
 /*--------------------
