--- a/www/css/style.css
+++ b/www/css/style.css
@@ -382,7 +382,8 @@ Orientation Tab Style
   border: #f8f8f8;
   border-width: 4px;
   border-style: solid;
-  
+  resize: none;
+  overflow: auto;
   font-size: 14px;
 }
 /*--------------------
