Nesting: Display 5 generations up and down

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1072,3 +1072,13 @@ Thin Section
   margin-left: 0;
   margin-bottom: 15px;
 }
+
+/*--------------------
+Nesting
+---------------------*/
+
+.nest-block{
+  border: solid;
+  border-width: 1px;
+  padding: 4px;
+}
