--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1193,3 +1193,30 @@ Nesting
   border-width: 1px;
   padding: 4px;
 }
+
+/*--------------------
+Data-Page
+---------------------*/
+
+.csv-view-modal{
+  top: 0 ;
+  bottom: 0 ; 
+  left: 0 ;
+  right: 0 ;
+  width: 100% ;
+}
+
+.data-table {
+  border-collapse: collapse;
+  border: 2px black solid;
+  font: 12px sans-serif;
+  overflow: auto;
+  width: 100%;
+  table-layout: fixed;
+}
+
+.data-td {
+  border: 1px black solid;
+  padding: 5px;
+  width: 100%
+}
