CSS: changed the "x" color on modals

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -352,7 +352,7 @@ Buttons
 }
 
 .close-modal-button {
-  color: lightgray;
+  color: black;
   position: relative;
   top: -5px;
   background: transparent;
