--- a/www/css/style.css
+++ b/www/css/style.css
@@ -846,6 +846,31 @@ Images on Images Tab
   margin-left: 40px;
 }
 
+.strabo-small-thumbnail {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+}
+
+.strabo-big-thumbnail {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+}
+
+.strabo-small-thumbnail img, .strabo-big-thumbnail img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  width: auto;
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+}
+
 /*--------------------
 Json Data Model
 ---------------------*/
