--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1264,15 +1264,16 @@ Offline Maps Page
 Spot Notes Page
 ---------------------*/
 .spot-notes-container {
-  height: 100%;
+  height: 95%;
+  padding-top: 25px;
 }
 
-.spot-notes-container .spot-notes {
+.spot-notes {
+  border: 2px solid #c3c3c3;
   font-size: x-large;
   line-height: 30px;
   resize: none;
   outline: none;
   width: 100%;
-  border: none;
   height: 100%;
 }
