--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1275,3 +1275,21 @@ Spot Notes Page
   width: 100%;
   height: 100%;
 }
+
+/*--------------------
+Sketch
+---------------------*/
+
+.eraser-icon{
+  background-image: url('../img/eraser.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: white;
+  border: 1px solid lightgray;
+  position: absolute;
+  left: 10px;
+  top: 30px;
+  width: 50px;
+  height: 50px;
+  border-radius: 8px;
+}
